chore(workflows): setup bun

--- a/.github/workflows/streaming-community_update-api-url.yml
+++ b/.github/workflows/streaming-community_update-api-url.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up Bun
+        uses: oven-sh/setup-bun@v2
+        
       - name: Read VITE_API_URL from .env
         id: read_env
         run: |
