--- a/.github/workflows/deploy-extensions.yml
+++ b/.github/workflows/deploy-extensions.yml
@@ -27,21 +27,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
+      - name: Set up Bun
+        uses: oven-sh/setup-bun@v2
 
       - name: Install dependencies
-        run: npm ci
+        run: bun ci
 
       - name: Build all extensions
         run: |
           for pkg_dir in extensions/*; do
             if [ -f "$pkg_dir/package.json" ]; then
               echo "Building $pkg_dir..."
-              npm run --workspace $pkg_dir build || true
+              bun run --workspace $pkg_dir build || true
             fi
           done
 
