--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "workspaces": [
-    "extensions/streaming-community"
+    "extensions/streaming-community",
+    "packages/*"
   ],
   "devDependencies": {
     "@teeviapp/vite": "^0.9.8",
