--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "name": "teevi-extensions",
   "version": "1.0.0",
   "private": true,
-  "workspaces": [
-    "extensions/*",
-    "packages/*"
-  ],
-  "catalog": {
-    "@teeviapp/vite": "^0.9.8",
-    "@teeviapp/core": "^0.9.8",
-    "vite": "^6.3.6",
-    "cheerio": "^1.1.2"
+  "workspaces": {
+    "packages": ["extensions/*", "packages/*"],
+    "catalog": {
+      "@teeviapp/vite": "^0.10.0",
+      "@teeviapp/core": "^0.10.0",
+      "vite": "^6.3.6",
+      "cheerio": "^1.1.2"
+    }
   },
   "devDependencies": {
-    "@types/bun": "^1.2.21",
-    "typescript": "^5.9.2"
+    "@types/bun": "^1.3.2",
+    "typescript": "^5.9.3"
   }
 }
