--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "teevi-extensions",
   "version": "1.0.0",
   "private": true,
-  "workspaces": {
-    "packages": ["extensions/*", "packages/*"],
-    "catalog": {
+  "workspaces": ["extensions/*", "packages/*"],
+  "catalog": {
       "@teeviapp/vite": "^0.10.0",
       "@teeviapp/core": "^0.10.0",
       "vite": "^6.3.6",
       "cheerio": "^1.1.2"
-    }
   },
   "devDependencies": {
     "@types/bun": "^1.3.2",
